src/index.css
@import "globalStyles.css";

html, body {
    min-width: fit-content;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    min-height: 100%;
    background: #f3f3f3;
    /*overflow-y: scroll;*/
}

#root {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: flex-start;
    /*overflow-y: scroll;*/
    background-color: #f3f3f3;
}

.loader {
    border: 8px solid #f3f3f3;
    border-radius: 50%;
    border-top: 8px solid #6C5CE7;
    width: 60px;
    height: 60px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

